[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/AudioAutomaticPlayer.gd" type="Script" id=1]

[node name="AudioAutomaticPlayer" type="AudioStreamPlayer"]
volume_db = -10.0
script = ExtResource( 1 )

[node name="VolumeFadeOutTween" type="Tween" parent="."]

[node name="VolumeFadeInTween" type="Tween" parent="."]
